Refactoring data generation